--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Starting tests...\" && jest",
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "dev": "ts-node-dev ./src/index.ts"
   },
   "keywords": [
     "api",
@@ -23,13 +24,14 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
     "jest": "^26.0.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
     "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^3.9.6",
     "uuid": "^8.2.0"
   }
