--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "api",
     "labook"
   ],
-  "author": "Bruno Móvio",
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -22,6 +21,7 @@
     "@types/knex": "^0.16.1",
     "@types/uuid": "^8.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.0.1",
