--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Starting tests...\" && jest",
-    "start": "ts-node ./src/index.ts",
-    "dev": "ts-node-dev ./src/index.ts"
+    "start": "tsc && node ./build/index.js",
+    "build": "tsc"
   },
   "keywords": [
     "api",
     "labook"
   ],
-
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -30,8 +29,6 @@
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
     "ts-jest": "^26.1.0",
-    "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0",
     "typescript": "^3.9.6",
     "uuid": "^8.2.0"
   }
